# rust-0bsd-riscv-kernel

./: .gdb_history  .gitignore  Cargo.toml  LICENSE  README.md  build_userspace_and_run.sh  drive.img  f.rs  f.txt  run.sh
.cargo/: config
drive-loopback/: main  other_prog
kernel/: Cargo.toml  diagnostics.json
kernel/.cargo/: config
kernel/arcinject/src/: lib.rs
kernel/flat_bytes/: README.md
kernel/flat_bytes/flat-bytes-derive/src/: lib.rs
kernel/flat_bytes/flat-bytes/src/: lib.rs
kernel/kernel_api/: Cargo.toml
kernel/kernel_api/src/: allocator.rs  directory.rs  elf.rs  handle.rs  interrupt.rs  lib.rs  memory.rs  panic.rs  println.rs  process_egg.rs  syscall.rs  syscall_return.rs
kernel/kernel_as_register/: Cargo.toml
kernel/kernel_as_register/src/: lib.rs
kernel/kernel_as_register_macro/: Cargo.toml
kernel/kernel_as_register_macro/src/: lib.rs
kernel/kernel_asm/: Cargo.toml
kernel/kernel_cpu/src/: lib.rs
kernel/kernel_error_macro/: Cargo.toml
kernel/kernel_error_macro/src/: lib.rs
kernel/kernel_io/: Cargo.toml
kernel/kernel_io/src/: lib.rs
kernel/kernel_lock/src/future/: rwlock.rs
kernel/kernel_lock/src/shared/: mod.rs  mutex.rs  rwlock.rs
kernel/kernel_lock/src/simple_shared/: mutex.rs
kernel/kernel_main/: Cargo.toml
kernel/kernel_main/src/: arc_inject.rs  as_register.rs  benchmark.rs  context_switch.rs  device_setup.rs  external_interrupt.rs  fdt.rs  future.rs  handle.rs  hart.rs  logger.rs  main.rs  plic.rs  process.rs  sbi.rs  scheduler.rs  std_macros.rs  syscall.rs  test_task.rs  timeout.rs  timer_queue.rs  trap.rs  trap_frame.rs  trap_future_executor.rs  virtual_buffers.rs
kernel/kernel_main/src/allocator/: mod.rs
kernel/kernel_main/src/drivers/traits/: block.rs  mod.rs  net.rs
kernel/kernel_main/src/drivers/virtio/: block.rs  future_util.rs  gpu.rs  mod.rs  net.rs
kernel/kernel_main/src/filesystem/ext2/: abi_interface.rs  code.rs  inode_handle.rs  mod.rs
kernel/kernel_main/src/handle_backends/: filesystem.rs  interrupt.rs  log_output.rs  mod.rs  process_egg.rs
kernel/kernel_main/src/kernel_debugging/: mod.rs  pub_names.rs
kernel/kernel_main/src/paging/: mod.rs  sv39.rs
kernel/kernel_syscall_abi/: Cargo.toml
kernel/kernel_syscall_abi/src/: directory_list.rs  filesystem.rs  lib.rs  process_egg.rs
kernel/kernel_util/src/: lib.rs
kernel/to_trait/: Cargo.toml
kernel/to_trait/src/: lib.rs
kernel/to_trait_macro/: Cargo.toml
kernel/to_trait_macro/src/: lib.rs
src/: allocator.rs  as_register.rs  asm.rs  backtrace.rs  context_switch.rs  cpu.rs  device_setup.rs  external_interrupt.rs  fdt.rs  file_descriptor.rs  future.rs  handle.rs  hart.rs  interrupt_context_waker.rs  logger.rs  main.rs  plic.rs  process.rs  repr_c_serde.rs  sbi.rs  scheduler.rs  std_macros.rs  syscall.rs  test_task.rs  timeout.rs  timer_queue.rs  trap.rs  trap_frame.rs  trap_future_executor.rs  unsafe_buffer.rs  virtual_buffers.rs
src/allocator/: linkedlist.rs  mod.rs  proxy.rs  proxy_trace.rs  shared_mutex_allocator.rs
src/asm/: boot.S  syscall.S  trap.S
src/asm/arch/: rv32f.S  rv64.S
src/crates/kernel_as_register/: Cargo.toml
src/crates/kernel_as_register/src/: lib.rs
src/crates/kernel_io/: Cargo.toml
src/crates/kernel_io/src/: lib.rs
src/crates/kernel_proc_macros/: Cargo.toml
src/crates/kernel_proc_macros/src/: lib.rs
src/drivers/: mod.rs
src/drivers/traits/: block.rs
src/drivers/uart/: mod.rs  ns16550a.rs
src/drivers/virtio/: block.rs  mod.rs
src/filesystem/: mod.rs
src/filesystem/ext2/: code.rs  inode_handle.rs  mod.rs  structures.rs
src/handle_backends/: filesystem.rs  log_output.rs  mod.rs  process_egg.rs
src/kernel_as_register_macro/: Cargo.toml
src/kernel_as_register_macro/src/: lib.rs
src/kernel_debugging/: backtrace.rs  mod.rs  pub_names.rs
src/kernel_lock/src/future/: mutex.rs  rwlock.rs
src/kernel_lock/src/spin/: mutex.rs  rwlock.rs
src/kernel_main/: Cargo.toml
src/kernel_main/src/: asm.rs  device_setup.rs  external_interrupt.rs  main.rs  process.rs  sbi.rs  syscall.rs  test_task.rs  timeout.rs  trap.rs  trap_frame.rs  unsafe_buffer.rs
src/kernel_main/src/allocator/: proxy_trace.rs
src/kernel_main/src/asm/: trap.S
src/kernel_main/src/drivers/virtio/: block.rs  gpu.rs  mod.rs
src/kernel_main/src/filesystem/ext2/: code.rs  inode_handle.rs  structures.rs
src/kernel_main/src/handle_backends/: process_egg.rs
src/kernel_main/src/kernel_debugging/: backtrace.rs
src/kernel_main/src/paging/: mod.rs
src/kernel_trap_frame/src/: lib.rs
src/ld/: virt.ld
src/lock/: mod.rs
src/lock/future/: mod.rs  mutex.rs  rwlock.rs
src/lock/interrupt/: mod.rs  mutex.rs  rwlock.rs
src/lock/shared/: mod.rs  mutex.rs  rwlock.rs
src/lock/simple_shared/: mod.rs  mutex.rs
src/lock/spin/: mod.rs  mutex.rs  rwlock.rs
src/paging/: mod.rs  sv39.rs
userspace/: Cargo.toml  place_all_binaries.sh
userspace/.cargo/: config
userspace/shell_program/: Cargo.toml
userspace/shell_program/src/: main.rs
userspace/test_program/: Cargo.toml  place_binary.sh  program.ld
userspace/test_program/src/: main.rs  start.S
