[package]
name = "rust-kernel-test"
version = "0.0.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = "1.0"
volatile-register = "0.2"
spin = "0.9"
num_enum = {version = "0.5", default-features = false}
log = "0.4"
itertools = {version = "0.10", default-features = false}
cstr_core = "0.2"
aligned = "0.3"
kernel_proc_macros = { path = "src/crates/kernel_proc_macros" }
slab_allocator_rs = "1"

[profile.dev]
opt-level = 0
lto = false
panic = "abort"