[package]
name = "rust-0bsd-riscv-kernel"
version = "0.0.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = "1.0"
volatile-register = "0.2"
num_enum = {version = "0.5", default-features = false}
log = "0.4"
itertools = {version = "0.10", default-features = false}
cstr_core = "0.2"
aligned = "0.3"
kernel_proc_macros = { path = "src/crates/kernel_proc_macros" }
slab_allocator_rs = "1"
zerocopy = "*"
spin = {features = ["lock_api"]}
# Nightly feature is to make Mutex::new() a const fn
lock_api = {version = "0.4", features = ["nightly"]}

[profile.dev]
opt-level = 0
lto = false
panic = "abort"