[package]
name = "kernel_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel_as_register = { path = "../kernel_as_register" }
kernel_syscall_abi = { path = "../kernel_syscall_abi" }
kernel_util = { path = "../kernel_util" }
kernel_error_macro = { path = "../kernel_error_macro" }
flat-bytes = { path = "../flat_bytes/flat-bytes" }
slab_allocator_rs = "1.0"
spin = "*"
elf_rs = "*"

[features]
panic = []
elf = []
default = ["panic", "elf"]