[package]
name = "kernel_as_register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

smallvec = {features = ["union", "const_generics", "specialization"]}
kernel_as_register_macro = { path = "../kernel_as_register_macro" }