[package]
name = "kernel_io"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
kernel_as_register = { path = "../kernel_as_register" }
kernel_syscall_abi = { path = "../kernel_syscall_abi" }
smallvec = "*"