[package]
name = "kernel_syscall_abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = {version = "0.5", default-features = false}
flat-bytes = { path = "../flat_bytes/flat-bytes" }
kernel_error_macro = { path = "../kernel_error_macro" }
kernel_as_register = { path = "../kernel_as_register" }
kernel_as_register_macro = { path = "../kernel_as_register_macro" }
smallvec = "*"